# Terminux

./: .gitignore  README.md  example.anim  exec.sh  terminux.sh
compilers/: CMakeLists.txt  Makefile
compilers/include/: BrightnessVector.h  Frame.h  StaticCanvas.h  Video.h  util.h
compilers/src/: BrightnessVector.cpp  Frame.cpp  StaticCanvas.cpp  main.cpp  util.cpp
compilers/tests/: module-1-tests.cpp
examples/: example.anim  example2.anim  example3.anim  giveup.anim  giveup.stcan  misato.frame  mycanvas.stcan  testframe-write.frame  testframe.frame
scripts/: exec  exec.cpp  exec.sh  lock  lock.cpp  splash.sh
scripts/exec/: Makefile  exec.cpp
